--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap-vue": "2.0.0-rc.15",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.3",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "firebase": "^5.9.1",
@@ -19,7 +20,7 @@
     "v-calendar": "^0.9.7",
     "v-contextmenu": "^2.8.0",
     "video.js": "^7.4.1",
-    "vue": "^2.6.6",
+    "vue": "^2.6.10",
     "vue-autosuggest": "^1.8.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-bootstrap-typeahead": "^0.2.6",
