--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-bootstrap-typeahead": "^0.2.6",
     "vue-chartjs": "^3.4.2",
     "vue-headroom": "^0.9.0",
+    "vue-html-to-paper": "^1.1.1",
     "vue-i18n": "^8.9.0",
     "vue-line-clamp": "^1.3.2",
     "vue-perfect-scrollbar": "^0.1.0",
